[package]
name = "grout"
version = "0.1.0"
authors = ["Will Nelson <will@wnelson.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
hyper = "0.13"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
