[package]
name = "grout"
version = "0.2.0"
authors = ["Will Nelson <will@wnelson.xyz>"]
edition = "2018"
description = "A dead simple hash-based HTTP router built on hyper."
license = "MIT"
readme = "README.md"
repository = "https://github.com/appellation/grout"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
hyper = { version = "0.13", optional = true }

[features]
http = ["hyper"]

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
